--- a/src/style.css
+++ b/src/style.css
@@ -11,10 +11,14 @@ body {
   max-width: 600px;
   margin: 60px auto;
   background: black;
-  opacity: 0.6;
+  opacity: 0.8;
   padding: 30px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
+}
+
+header {
+  margin-bottom: 40px;
 }
 
 h1 {
@@ -25,27 +29,28 @@ h1 {
   line-height: 1.2;
 }
 
-header {
-  margin-bottom: 40px;
-}
-
 form {
-  padding: 30px;
-
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 20px;
   border-radius: 10px;
   display: flex;
   margin-bottom: 30px;
 }
 
-.prompt {
+.hint {
+  line-height: 1.5;
+  margin-top: 1px;
+  font-size: 14px;
+  color: yellow;
+}
+
+.instructions {
   padding: 16px;
   border: 1px solid rgba(39, 33, 66, 0.5);
   width: 80%;
   font-size: 16px;
   border-radius: 50px;
   line-height: 20px;
-  color: maroon;
+  color: black;
 }
 
 .submit-button {
@@ -59,22 +64,42 @@ form {
   padding: 14px 24px;
 }
 
-.recipe {
+.poem {
   font-size: 16px;
-
   padding: 20px;
   line-height: 2;
-  border-left: 3px solid #885df1;
-  box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+}
+
+.hidden {
+  display: none;
+}
+
+.poem strong {
+  color: white;
 }
 
 footer {
   text-align: center;
-  font-size: 18px;
+  font-size: 13px;
+  margin-top: 30px;
   color: white;
-  line-height: 1.5;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
 
 a {
-  color: rgb(184, 21, 21);
+  color: yellow;
 }
